--- a/src/partials/components/componentCreateGroup.hbs
+++ b/src/partials/components/componentCreateGroup.hbs
@@ -37,8 +37,8 @@
         </div>
     </div>
 
-    <button class="create-group__button">
+    <a href="/create" class="create-group__button">
         <img class="create-group__button-icon" src="/icons/purpleplus.svg" alt="Добавить канал" />
         <span>Создать группу</span>
-    </button>
+    </a>
 </section>
