--- a/src/partials/components/componentPreview.hbs
+++ b/src/partials/components/componentPreview.hbs
@@ -58,10 +58,10 @@
         <div class="preview-post-button-icon">
             <img src='/icons/plus.svg' />
         </div>
-        <div class="preview-post-button-text">
+        <a href="/" class="preview-post-button-text">
             <span class="preview-post-button-title">Опубликовать</span>
             <span class="preview-post-button-time">Пост можно изменить в течение ХХ часов</span>
-        </div>
+        </a>
     </button>
     </div>
 </section>
