--- a/src/css/components/componentHome.css
+++ b/src/css/components/componentHome.css
@@ -117,6 +117,7 @@
 
 .search-input-wrapper {
   background: rgba(255, 255, 255, 0.6);
+  position: relative;
   border-radius: 8px;
   border: 1px solid rgba(225, 226, 235, 1);
   display: flex;
@@ -513,4 +514,81 @@
 
 .tab-content.active {
   display: block;
+}
+
+/* Стили для onboarding */
+.onboarding {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 2000;
+}
+
+.onboarding-canvas {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.onboarding-modal {
+  position: fixed;
+  border-radius: 0px 16px 16px 16px;
+  width: calc(100% - 32px);
+  max-width: 400px;
+  z-index: 2001;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.onboarding-modal .modal__body {
+  padding: 16px;
+}
+
+.onboarding-modal .modal__body p {
+  margin-bottom: 24px;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 18px;
+  letter-spacing: 0px;
+  color: rgba(0, 0, 0, 0.85);
+}
+
+.modal__body {
+  background: white;
+  border-radius: 0px 16px 16px 16px;
+}
+
+.onboarding-buttons {
+  display: flex;
+  gap: 12px;
+  margin-bottom: 20px;
+}
+
+.onboarding-progress {
+  display: flex;
+  justify-content: center;
+  gap: 8px;
+}
+
+.onboarding-progress span {
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  background: rgba(0, 0, 0, 0.2);
+}
+
+.onboarding-progress span.active {
+  background: rgba(0, 0, 0, 0.85);
+}
+
+/* Подсветка элементов */
+.highlight {
+  z-index: 2001;
+  box-shadow: 0px 4px 30px 0px rgba(133, 111, 255, 0.5);
+  width: fit-content;
 }
