--- a/src/css/components/componentNewPost.css
+++ b/src/css/components/componentNewPost.css
@@ -350,7 +350,7 @@ color: rgba(165, 165, 165, 1);
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 1);
+  background: rgba(0, 0, 0, 1) !important;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -358,7 +358,6 @@ color: rgba(165, 165, 165, 1);
 }
 
 .modal-content {
-  background: white;
   width: 100%;
   max-width: 343px;
   border-radius: 14px;
@@ -392,6 +391,8 @@ color: rgba(165, 165, 165, 1);
 .modal-body {
   padding: 16px;
   box-sizing: border-box;
+  background-color: #fff;
+  border-radius: 0 16px 0 0;
 }
 
 .modal-body-hidden {
@@ -400,6 +401,8 @@ color: rgba(165, 165, 165, 1);
   display: flex;
   flex-direction: column;
   gap: 16px;
+  border-radius: 0 16px 0 0;
+  background-color: #fff;
 }
 
 .modal-input,
