--- a/src/partials/components/componentCreate.hbs
+++ b/src/partials/components/componentCreate.hbs
@@ -278,8 +278,8 @@
 
   <!-- Добавляем новую модалку для добавления в группу -->
   <div class="modal modal-add-to-group" id="add-to-group-modal" data-modal-add-to-group style="display: none;">
-          <div class="modal__header">
-        <div class="modal__header-wrapper">
+          <div class="modal__header-add">
+        <div class="modal__header-wrapper-add">
           <h2 class="modal__title">Добавить в группу</h2>
           <img src="/images/create/graph.png" alt="graph"/>
         </div>
@@ -290,7 +290,7 @@
     <div class="modal__content">
 
       <div class="modal__body">
-        <div class="modal__header-wrapper">
+        <div class="modal__header-wrapper-channels">
           <p class="modal__text-choosen">Каналы</p>
           <span class="modal__counter">24</span>
         </div>
@@ -305,7 +305,6 @@
             class="modal__search-input" 
             placeholder="Выберите группу"
           >
-          <img src="/icons/chevron.svg" class="modal__search-arrow" alt="Стрелка">
           <div class="modal__search-dropdown">
             <!-- Группы будут добавлены динамически -->
           </div>
