--- a/src/partials/components/componentNewPost.hbs
+++ b/src/partials/components/componentNewPost.hbs
@@ -204,3 +204,24 @@
     </div>
   </div>
 </div>
+
+<div class="modal modal-exit" data-modal="exit">
+      <div class="modal__header">
+      <div class="modal__header-wrapper">
+        <h2 class="modal__title-exit">Выйти из редактора?</h2>
+        <img src="/images/create/graph.png" alt="graph"/>
+      </div>
+      <button class="modal__close">
+        <img src="/icons/closemodal.svg" alt="Закрыть">
+      </button>
+    </div>
+  <div class="modal-content">
+    <div class="modal-body">
+      <div class="modal__text">Если вы выйдите, все изменения будут потеряны.</div>
+      <div class="modal-buttons">
+        <button class="modal-button modal-button--cancel">Отмена</button>
+        <button class="modal-button modal-button--exit">Выйти</button>
+      </div>
+    </div>
+  </div>
+</div>
