--- a/src/css/components/componentNewPost.css
+++ b/src/css/components/componentNewPost.css
@@ -392,7 +392,7 @@ color: rgba(165, 165, 165, 1);
   padding: 16px;
   box-sizing: border-box;
   background-color: #fff;
-  border-radius: 0 16px 0 0;
+  border-radius: 0 16px 16px 16px !important;
 }
 
 .modal-body-hidden {
@@ -558,4 +558,90 @@ color: rgba(165, 165, 165, 1);
   align-items: center;
   justify-content: space-between;
   min-width: 160px;
+}
+
+/* Обновляем стили для модального окна выхода */
+.modal.modal-exit {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.65);
+  z-index: 1000;
+}
+
+.modal.modal-exit .modal-content {
+  width: 100%;
+  max-width: none !important;
+  border-radius: 0 16px 16px 16px;
+  overflow: hidden;
+  background: white;
+}
+
+.modal.modal-exit .modal__header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.modal.modal-exit .modal__header-wrapper {
+  display: flex;
+  align-items: center;
+}
+
+.modal.modal-exit .modal__title {
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 24px;
+  letter-spacing: 0px;
+  color: black;
+  margin: 0;
+}
+
+.modal__title-exit {
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 24px;
+  letter-spacing: 0px;
+  color: black;
+  margin: 0;
+  white-space: nowrap;
+  padding: 10px 16px 14px;
+  background-color: #fff;
+  border-radius: 16px 0 0 0;
+}
+
+.modal.modal-exit .modal__close {
+  background: none;
+  border: none;
+  padding: 0;
+  cursor: pointer;
+}
+
+.modal.modal-exit .modal__text {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 18px;
+  letter-spacing: 0px;
+  color: rgba(0, 0, 0, 0.85);
+  margin-bottom: 24px;
+}
+
+.modal.modal-exit .modal-body {
+  padding: 16px;
+  background: white;
+}
+
+.modal.modal-exit .modal-button--cancel {
+  color: rgba(15, 15, 15, 1);
+  border: 1px solid rgba(234, 235, 239, 1);
+  background: white;
+}
+
+.modal.modal-exit .modal-button--exit {
+  background: rgba(15, 15, 15, 1);
+  color: white;
+  border: none;
 }
