Feat: stable ver

--- a/src/partials/components/componentNewPost.hbs
+++ b/src/partials/components/componentNewPost.hbs
@@ -59,8 +59,20 @@
               <div class='photo-position-content-top'>
                 <img src='/icons/imagepos.svg' alt='top' />
               </div>
+              <div class="photo-position-content-top-text-wrapper">
+                <div class="photo-position-content-top-text-1">
+                </div>
+                <div class="photo-position-content-top-text-2">
+                </div>
+              </div>
             </button>
             <button class='photo-position-button' data-position='right'>
+                            <div class="photo-position-content-top-text-wrapper">
+                <div class="photo-position-content-top-text-1">
+                </div>
+                <div class="photo-position-content-top-text-2">
+                </div>
+              </div>
               <div class='photo-position-content-bottom'>
                 <img src='/icons/imagepos.svg' alt='bottom' />
               </div>
@@ -97,7 +109,7 @@
 
       <div class='new-post-buttons'>
         <button class='new-post-button new-post-button--link' data-button-trigger>
-          <span>Кнопка со ссылкой</span>
+          <span>Кнопка <br/> со ссылкой</span>
           <img src='/icons/purpleplus.svg' alt='Link' />
         </button>
         <button class='new-post-button new-post-button--hidden' data-hidden-trigger>
