--- a/src/css/components/componentNewPost.css
+++ b/src/css/components/componentNewPost.css
@@ -2,6 +2,8 @@
   display: flex;
   flex-direction: column;
   overflow: hidden;
+  min-height: 100svh;
+  background-color: white;
 }
 
 .new-post-wrapper {
@@ -138,6 +140,7 @@
   display: flex;
   gap: 12px;
   margin-bottom: 107px;
+  padding-top: 16px;
 }
 
 .new-post-button {
@@ -149,10 +152,12 @@
   background: none;
   cursor: pointer;
   text-align: left;
-font-weight: 400;
-font-size: 15px;
-line-height: 18px;
-letter-spacing: 0.1px;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 18px;
+  letter-spacing: 0.1px;
+  background-color: rgba(241, 241, 243, 1);
+  border-radius: 8px;
 }
 
 .preview-button {
@@ -277,34 +282,56 @@ color: rgba(165, 165, 165, 1);
   cursor: pointer;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: start;
   gap: 8px;
   transition: all 0.2s ease;
 }
 
 .photo-position-button.active {
   border-color: rgba(133, 111, 255, 1);
-  background: rgba(133, 111, 255, 0.1);
 }
 
 .photo-position-content-top {
   width: 100%;
-  height: 80px;
-  border-radius: 4px;
+  border-radius: 12px;
   display: flex;
-  align-items: flex-start;
+  flex-direction: column;
+  align-items: center;
   justify-content: center;
-  padding-top: 22px;
+  padding: 22px;
+  background-color: rgba(241, 241, 243, 1);
+  box-sizing: border-box;
+}
+
+.photo-position-content-top-text-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+  width: 100%;
+}
+
+.photo-position-content-top-text-1 {
+  width: 80%;
+  height: 8px;
+  background-color: rgba(241, 241, 243, 1);
+}
+
+.photo-position-content-top-text-2 {
+  width: 60%;
+  height: 8px;
+  background-color: rgba(241, 241, 243, 1);
 }
 
 .photo-position-content-bottom {
   width: 100%;
-  height: 80px;
-  border-radius: 4px;
+  border-radius: 12px;
   display: flex;
-  align-items: flex-end;
+  flex-direction: column;
+  align-items: center;
   justify-content: center;
-  padding-bottom: 22px;
+  padding: 22px;
+  background-color: rgba(241, 241, 243, 1);
+  box-sizing: border-box;
 }
 
 /* Стили для строк с кнопками/продолжением */
@@ -527,6 +554,7 @@ color: rgba(165, 165, 165, 1);
   display: flex;
   align-items: center;
   gap: 8px;
+  flex: 1;
 }
 
 .new-post-attachments-container__item-grip-icon {
@@ -557,7 +585,12 @@ color: rgba(165, 165, 165, 1);
   display: flex;
   align-items: center;
   justify-content: space-between;
-  min-width: 160px;
+  margin-right: 16px;
+  gap: 8px;
+  padding: 12px;
+  background-color: rgba(241, 241, 243, 1);
+  border-radius: 8px;
+  flex: 1;
 }
 
 /* Обновляем стили для модального окна выхода */
