--- a/src/partials/components/componentCreate.hbs
+++ b/src/partials/components/componentCreate.hbs
@@ -213,7 +213,7 @@
           <button class="modal__button modal__button--cancel" data-modal-close>Отмена</button>
           <button class="modal__button modal__button--add">Добавить</button>
         </div>
-        <div class="modal__link-wrapper">
+        <div class="modal__link-wrapper-instruction">
           <a href="#" class="modal__link">Инструкция по подключению</a>
           <img src="/icons/external.svg" alt="Стрелка" class="modal__link-arrow">
         </div>
