--- a/src/partials/components/componentHelp.hbs
+++ b/src/partials/components/componentHelp.hbs
@@ -24,6 +24,7 @@
                 <div class="help__accordion-panel">
                     <h1 class="help__accordion-panel-title">Panel 3 Content</h1>
                     <p class="help__accordion-panel-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et illo illum vel vero veniam blanditiis laboriosam animi labore atque accusantium amet excepturi voluptates perspiciatis doloribus ipsum harum nobis quam reiciendis.</p>
+                    <img src="/images/create/settings.png" alt="settings" />
                 </div>
             </details>
 
