--- a/src/partials/components/componentPreview.hbs
+++ b/src/partials/components/componentPreview.hbs
@@ -2,13 +2,16 @@
     <div class="preview-wrapper">
     <div class="preview-post">
         <div class="preview-post-header">
-            <div class="preview-post-image">
-                <img src="/images/preview/channel.png" alt="channel" />
+            <div class="preview-post-header-wrapper">
+                <div class="preview-post-image">
+                    <img src="/images/preview/channel.png" alt="channel" />
+                </div>
+                <div class="preview-post-title">
+                    <h3 class="preview-post-title-name">My Chanel</h3>
+                    <span class="preview-post-title-username">@mychanel</span>
+                </div>
             </div>
-            <div class="preview-post-title">
-                <h3 class="preview-post-title-name">My Chanel</h3>
-                <span class="preview-post-title-username">@mychanel</span>
-            </div>
+            <img class="preview-post-header-graph" src="/images/create/graph.png" alt="graph" />
         </div>
         <div class="preview-post-content">
             <div class="preview-post-content-wrapper">
