--- a/src/css/components/componentPreview.css
+++ b/src/css/components/componentPreview.css
@@ -13,11 +13,7 @@
 }
 
 .preview-post-header {
-    width: 100%;
-    padding-inline: 16px;
-    padding-block: 10px;
     display: flex;
-    gap: 8px;
     align-items: center;
 }
 
@@ -25,11 +21,24 @@
     width: 35px;
     height: 35px;
     border-radius: 50%;
+    margin-inline-end: 8px;
 }
 
 .preview-post-title {
     display: flex;
     flex-direction: column;
+}
+
+.preview-post-header-graph {
+    height: 55px;
+}
+
+.preview-post-header-wrapper {
+    display: flex;
+    align-items: center;
+    padding: 10px 16px;
+    background-color: #fff;
+    border-radius: 16px 0 0 0;
 }
 
 .preview-post-title-name {
