--- a/src/partials/components/componentNewPost.hbs
+++ b/src/partials/components/componentNewPost.hbs
@@ -104,7 +104,7 @@
       </button>
 
       <div class='new-post-attachments' data-attachments-container>
-        <div class='search-tags attachments-tags'></div>
+        <div class='photo-tags'></div>
       </div>
 
       <div class='new-post-buttons'>
