--- a/src/css/components/componentCreate.css
+++ b/src/css/components/componentCreate.css
@@ -96,7 +96,10 @@
 
 .create-card__counter {
   color: rgba(169, 169, 169, 1);
+  background-color: rgba(237, 237, 237, 1);
+  border-radius: 10px;
   padding: 8px;
+  padding-block: 4px;
 font-weight: 500;
 font-size: 12px;
 line-height: 18px;
@@ -708,8 +711,8 @@ letter-spacing: 0px;
 
 .group-card__members-count {
 font-weight: 500;
-font-size: 11px;
-line-height: 16px;
+font-size: 8px;
+line-height: 8px;
 letter-spacing: 0px;
 color: rgba(133, 111, 255, 1);
 border-radius: 50%;
@@ -811,7 +814,6 @@ padding: 4px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #f0f0f0;
   padding-block-end: 16px;
   font-weight: 400;
   font-size: 17px;
