--- a/src/css/components/componentCreate.css
+++ b/src/css/components/componentCreate.css
@@ -1235,7 +1235,7 @@ padding: 4px;
   cursor: pointer;
   font-size: 16px;
   line-height: 24px;
-  color: #000;
+  color: var(--text-primary);
 }
 
 .modal-add-to-group .modal__search-item:hover {
